--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "drag-enabled",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "license": "MIT",
   "scripts": {
     "ng": "ng",
@@ -11,7 +11,18 @@
   },
   "private": false,
   "keywords": [
-	"angular 4", "drag-drop", "drag and drop", "dragndrop", "drag&drop", "drag", "drop", "draggable", "html 5", "easy", "best", "reusable"
+	"angular 4",
+	"drag-drop",
+	"drag and drop",
+	"dragndrop",
+	"drag&drop",
+	"drag",
+	"drop",
+	"draggable",
+	"html 5",
+	"easy",
+	"best",
+	"reusable"
   ],
   "dependencies": {
     "@angular/common": "^5.0.0 || ^4.0.0 || ^2.0.0",
