--- a/projects/drag-enabled/package.json
+++ b/projects/drag-enabled/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@sedeh/drag-enabled",
-  "version": "4.1.1",
+  "version": "4.3.1",
   "peerDependencies": {
     "@angular/common": "^15.2.0",
     "@angular/core": "^15.2.0"
@@ -8,6 +8,22 @@
   "dependencies": {
     "tslib": "^2.3.0"
   },
+  "exports": {
+    ".": {
+      "assets": "./assets/drag.scss"
+    }
+  },
+  "files": [
+    "lib",
+    "assets",
+    "index.d.ts",
+    "public-api.d.ts",
+    "package.json",
+    "README.md",
+    "esm2020",
+    "fesm2015",
+    "fesm2020"
+  ],
   "sideEffects": false,
   "keywords": [
     "angular",
